# web-scraping

./: .env.example  .gitignore  NEXT_STEP.txt  NEXT_STEPS.md  NEXT_STEP_JIRA.txt  crawler2.py  extract_href_revaio_from_html_zips.py  extract_text_revaio_from_html_zips.py  load_data_from_solr.py  load_webgrader_extract_emails.py  load_webgrader_full_content.py  poznamky.txt  pyproject.toml  requirements.txt  run_api.sh  run_parser.sh  run_requeue.sh  run_scraper.sh  run_server.sh  summary-03.md  summary-04.md  update_errors_from_logs.sh
config/: settings.py
docs/: Web_scraping_system_pro_extrakci_firemnich_dat.md  admin_manual.md  refresh-repomix  repomix.config.json
migrations/: 001_initial_schema.sql  002_seed_prompts.sql  003_monitoring_views.sql  004_add_change_checked.sql  004_refactor_schema.sql  005_rename_pks_add_opco.sql  007_delete_cascade_procedure.sql  008_redirect_updates_view.sql  009_add_html_path_to_results.sql  010_create_ondrej_metadata_table.sql  011_add_normalized_url_to_queue.sql  012_add_last_scrape_at_to_queue.sql
old-scripts/: extract_be_phone_from_html_zips.py  load_data_to_openai_to_formating.py  load_webgrader_extract_addresses.py  (+2 more)
web-scraper/: .env.example  .gitignore  GEMINI.md  README.md  poznamky.txt  prompt-02.txt  prompt-03.txt  prompt-04.txt  prompt-06.txt  prompt-07.txt  pyproject.toml  run_all.sh  run_detector.sh  run_scraper.sh  summary-02.md
web-scraper/config/: settings.py
web-scraper/docs/: admin_manual.md
web-scraper/migrations/: 001_initial_schema.sql  002_seed_prompts.sql  003_monitoring_views.sql  006_fix_listing_id_type.sql
web-scraper/scripts/: bloom_admin.py  calculate_costs.py  cleanup_tmp.sh  monitor.py  prompt_admin.py  queue_admin.py  update_errors_from_log.py
web-scraper/src/llm/: prompts.py
web-scraper/src/utils/: address.py  bloom.py  db.py  language.py  multipage.py  patterns.py  urls.py
web-scraper/src/workers/: change_detector.py  parser.py  requeue.py  scraper.py
web-scraper/tests/: repro_crawlee.py  repro_item_access.py  test_bloom_mock.py  test_patterns_manual.py  test_scraper_logic.py  test_urls.py
(+79 files in other folders)
