[project]
name = "web-scraper"
version = "0.1.0"
description = "Web scraping system for extracting company data"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "playwright",
    "crawlee[beautifulsoup,playwright]", # Added crawlee
    "beautifulsoup4",
    "lxml",
    "langdetect",
    "spacy",
    "click",
    "pyyaml",
    "python-dotenv",
    "phonenumbers",
    "pybloom-live",
    "requests",
    "datefinder",
    "profusion>=0.1.3",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
