[project]
name = "web-scraper"
version = "0.1.0"
description = "Web scraping system for extracting company data"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "playwright",
    "crawlee[beautifulsoup,playwright]", # Added crawlee
    "beautifulsoup4",
    "lxml",
    "langdetect",
    "spacy",
    "click",
    "pyyaml",
    "python-dotenv",
    "phonenumbers",
    "pybloom-live",
    "requests",
    "datefinder",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
